updated notes including kata challenges

--- a/test/test.html
+++ b/test/test.html
@@ -3,6 +3,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.7.0/brython.min.js"></script>
   </head>
   <body onload="brython();">
-    <script type="text/python3" src="sort2.py"></script>
+    <script type="text/python3" src="test.py"></script>
   </body>
 </html>
